examples/00-ingress-nginx-baseline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
  namespace: echo
spec:
  selector:
    app: echo
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 80
